Attemt to fix image on about page not showing up in gh-pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,8 +119,7 @@ ol {
 
   .yearbook-photo {
     float: right;
-    height: 0;
-    width: 0;
+    display: none;
   }
 
   .music-players {
